--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect index.js"
-    },
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,8 +16,5 @@
     "express-handlebars": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
   }
 }
